[package]
name = "nkap"
version = "0.1.0"
edition = "2021"
description = "This tools allows to convert amounts between different currencies using real-time data."
authors = ["Brady Fomegne <brady.fomegne@outlook.com>"]
repository = "https://github.com/pythonbrad/nkap"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
